syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User {
  rpc GetUserList(PageInfo) returns (UserListResponse) {}
  rpc GetUserById(IdRequest) returns (UserInfoResponse) {}
  rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse) {}
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse) {}
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty) {}
  rpc CheckPassword(PasswordCheckInfo) returns (CheckResponse) {}
}

message PasswordCheckInfo {
  string password = 1;
  string encryptedPassword = 2;
}

message CheckResponse {
  bool result = 1;
}

message PageInfo {
  int32 page = 1;
  int32 pageSize = 2;
}

message MobileRequest {
  string mobile = 1;
}

message IdRequest {
  int64 id = 1;
}

message CreateUserInfo {
  string nickname = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo {
  int64 id = 1;
  string nickname = 2;
  string gender = 3;
  uint64 birthday = 4;
}

message UserListResponse {
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}

message UserInfoResponse {
  int64 id = 1;
  string password = 2;
  string mobile = 3;
  string nickname = 4;
  uint64 birthday = 5;
  string gender = 6;
  int32 role = 7;
}